--- a/RxJavaWithCallback/app/build.gradle
+++ b/RxJavaWithCallback/app/build.gradle
@@ -20,6 +20,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    // if project is built on java below lines should be added
+    // otherwise RxAndroid will crash for, observeOn(AndroidSchedulers.mainThread())
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
